--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,84 @@
 
     <!-- End of Nav Bar -->
     
+<!-- Stat of main -->
+
+<div class="container content">
+    <div class="row">
+        <div class="col-sm-12 col-md-6">
+            <div class="row">
+                <div class="col-xs-6 col-sm-4"><img src="img/doctor1.jpg" alt="Dr. Joe Smith" class="img-responsive"></div>
+                <div class="col-xs-6 col-sm-8">
+                    <h3>Dr. Joe Smith</h3>
+                </div>
+                <div class="col-xs-12 col-sm-8">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate explicabo optio eveniet eius accusamus itaque voluptatem sapiente impedit in tempora suscipit deleniti, incidunt animi voluptatibus.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-sm-4">
+                    <img src="img/doctor2.jpg" alt="Dr. Jane Smith" class="img-responsive"></div>
+                <div class="col-xs-6 col-sm-8">
+                    <h3>Dr. Jane Smith</h3>
+                </div>
+                <div class="col-xs-12 col-sm-8">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ducimus, quod adipisci aut obcaecati harum veritatis, magni nam assumenda veniam repellat eaque repudiandae tenetur expedita!</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Department</th>
+                            <th>Phone Number</th>
+                            <th>Extension</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Register</td>
+                            <td>834-987-0989</td>
+                            <td>x890</td>
+                        </tr>
+                        <tr>
+                            <td>Dog Toys</td>
+                            <td>834-987-0989</td>
+                            <td>x890</td>
+                        </tr>
+                        <tr>
+                            <td>Cat Stuff</td>
+                            <td>834-987-0989</td>
+                            <td>x890</td>
+                        </tr>
+                        <tr>
+                            <td>Parrot Stuff</td>
+                            <td>834-987-0989</td>
+                            <td>x890</td>
+                        </tr>
+                        <tr>
+                            <td>Vet</td>
+                            <td>834-987-0989</td>
+                            <td>x890</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="col-sm-12 col-md-6">
+            <div class="row">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.609142008524!2d-119.7880175850475!3d36.731947279962675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945e26d4340503%3A0xb32dda71cf0730a0!2sBitwise+South+Stadium!5e0!3m2!1sen!2sus!4v1563848990537!5m2!1sen!2sus" width="550" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+            </div>
+            <div class="row">
+                <img src="img/cat.jpg" alt="Cat Image" class="img-responsive pet_img pull-left">
+                <img src="img/dog.jpg" alt="Dog Image" class="img-responsive pull-right pet_img">
+            </div>
+        </div>
+
+    </div>
+</div>
 
 
 
@@ -41,9 +119,6 @@
 
 
 
-
-
-    
 <!-- Start of Footer -->
 
     <footer class="container-fluid">
